--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "Import any (binary) file as a blob URL.",
   "main": "dist/rollup-plugin-file-as-blob.cjs.js",
   "jsnext:main": "dist/rollup-plugin-file-as-blob.es.js",
-  "files": [ "src", "dist", "README.md" ],
+  "files": [
+    "src",
+    "dist",
+    "README.md"
+  ],
   "dependencies": {
-    "rollup-pluginutils": "^1.3.1"
+    "mmmagic": "^0.4.5",
+    "rollup-pluginutils": "^1.5.2"
   },
   "devDependencies": {
-    "eslint": "^2.11.1",
-    "rollup": "^0.26.3",
-    "rollup-plugin-buble": "^0.10.0"
+    "eslint": "^3.8.1",
+    "rollup": "^0.36.3",
+    "rollup-plugin-buble": "^0.14.0"
   },
   "scripts": {
     "test": "echo \"no tests...\"",
     "pretest": "npm run build:cjs",
     "build": "npm run build:cjs && npm run build:es",
-    "build:cjs": "rollup -c -o dist/rollup-plugin-image.cjs.js -f cjs",
-    "build:es": "rollup -c -o dist/rollup-plugin-image.es.js -f es6",
+    "build:cjs": "rollup -c -o dist/rollup-plugin-file-as-blob.cjs.js -f cjs",
+    "build:es": "rollup -c -o dist/rollup-plugin-file-as-blob.es.js -f es6",
     "lint": "eslint src",
     "prepublish": "npm run lint && npm test && npm run build:es"
   },
